[package]
name = "iso-rs"
version = "0.1.5"
authors = ["Daksh14 <41485688+Daksh14@users.noreply.github.com>"]
edition = "2024"
build = "build/build.rs"
description = "A crate to query ISO data, which includes countries, currencies, etc."
license = "MIT"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
phf = "0.11"

[build-dependencies]
paste = "1.0"
phf_codegen = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1"

[features]
default = ["all"]
from_capitals = []
from_alpha_2 = []
from_alpha_3 = []
from_regions = []
all = ["from_capitals", "from_alpha_2", "from_alpha_3", "from_regions"]
